# XC-Sim-Opensource

./: Cargo.toml  README.md  build_wasm.sh
scripts/: generate_icon.py
xcode/: Shared.xcconfig
xcsim/: Cargo.toml  build.rs  staff.yml
xcsim-core/: Cargo.toml
xcsim-core-avc/: Cargo.toml  pull-static-lib.sh
xcsim-core-avc/src/: frame_core.rs  lib.rs
xcsim-core-l10n/: Cargo.toml
xcsim-core-l10n/src/: global_core.rs  lib.rs
xcsim-core-l10n/tests/: langid.rs
xcsim-core-pbc/: Cargo.toml
xcsim-core-pbc/src/: main.rs
xcsim-core/locales/ko-KR/: ending.ftl
xcsim-core/locales/ru-RU/: scene.ftl
xcsim-core/locales/th-TH/: scene.ftl
xcsim-core/src/: bin_core.rs  config_core.rs  core_mod.rs  custom_style_core.rs  dir_core.rs  ext_core.rs  fs_core.rs  info_core.rs  judge_core.rs  lib.rs  log_core.rs  moddir_core.rs  parse_core.rs  particle_core.rs  scene_core.rs  task_core.rs  time_core.rs  tips.txt  ui_core.rs
xcsim-core/src/core_mod/: anim_core.rs  chart_core.rs  effect_core.rs  line_core.rs  note_core.rs  object_core.rs  render_core.rs  resource_core.rs  tween_core.rs  video_core.rs
xcsim-core/src/core_mod/shaders/: chromatic.glsl  circle_blur.glsl  fisheye.glsl  glitch.glsl  grayscale.glsl  noise.glsl  pixel.glsl  radial_blur.glsl  shockwave.glsl  vignette.glsl
xcsim-core/src/parse_core/: extra_parse.rs  pec_parse.rs  pgr_parse.rs  rpe_parse.rs
xcsim-core/src/scene_core/: ending_scene.rs  fxaa.glsl  game_scene.rs  loading_scene.rs
xcsim-core/src/ui_core/: billboard_ui.rs  chart_info_ui.rs  dialog_ui.rs  scroll_ui.rs  shading_ui.rs  shadow_ui.rs  text_ui.rs
xcsim-main/: Cargo.toml
xcsim-main/src/: main.rs
xcsim-monitor/: Cargo.toml
xcsim-monitor/src/: cloud_mod.rs  launch_mod.rs  main.rs  scene_mod.rs
xcsim.xcodeproj/: project.pbxproj
xcsim.xcodeproj/project.xcworkspace/xcshareddata/: WorkspaceSettings.xcsettings
xcsim.xcodeproj/xcuserdata/sjfhsjfh.xcuserdatad/xcschemes/: xcschememanagement.plist
xcsim/locales/de-DE/: settings.ftl
xcsim/locales/en-SG/: common.ftl  home.ftl  library.ftl  respack.ftl  settings.ftl  song.ftl
xcsim/locales/en-US/: import.ftl  login.ftl  settings.ftl  song.ftl
xcsim/locales/fr-FR/: settings.ftl
xcsim/locales/id-ID/: settings.ftl
xcsim/locales/ja-JP/: settings.ftl
xcsim/locales/ko-KR/: settings.ftl
xcsim/locales/pl-PL/: settings.ftl
xcsim/locales/pt-BR/: settings.ftl
xcsim/locales/ru-RU/: collection.ftl  multiplayer.ftl  profile.ftl  resource.ftl  settings.ftl
xcsim/locales/th-TH/: settings.ftl
xcsim/locales/tr-TR/: settings.ftl
xcsim/locales/vi-VN/: settings.ftl
xcsim/locales/zh-CN/: import.ftl  settings.ftl
xcsim/locales/zh-TW/: login.ftl  settings.ftl  song.ftl
xcsim/src/: anim_app.rs  chap_unlock_app.rs  charts_view_app.rs  client_app.rs  custom_style_io_app.rs  data_app.rs  device_auth_app.rs  icons_app.rs  images_app.rs  lib.rs  locale_gate_app.rs  login_app.rs  mp_app.rs  page_app.rs  popup_app.rs  rate_app.rs  resource_app.rs  scene_app.rs  tabs_app.rs  tags_app.rs  theme_app.rs  threed_app.rs  uml_app.rs  unlock_app.rs
xcsim/src/client_app/: model_client.rs
xcsim/src/client_app/model_client/: collection_model.rs  user_model.rs
xcsim/src/mp_app/: panel_mp.rs
xcsim/src/page_app/: coll_page.rs  favorites_page.rs  home_page.rs  library_page.rs  message_page.rs  offset_page.rs  respack_page.rs  settings_page.rs
xcsim/src/scene_app/: bm_chapter_scene.rs  chapter_scene.rs  chart_order_scene.rs  main.rs  profile_scene.rs  song_scene.rs  unlock_scene.rs
xcsim/src/uml_app/: parse_uml.rs
xcsim/tests/: integrated_test.rs
